framec_tests/language_specific/python/v3_facade_smoke/negative/stack_with_args.frm
@target python

system S {
    machine:
        $A {
            e() {
                __frame_stack_push(1)
            }
        }
}

